# StarCrunch

./: README.md
Starcrunch_c64/: starcrunch.basic
Starcrunch_nix/: Makefile  starcrunch.cpp
Starcrunch_vb/: Test.sln
Starcrunch_vb/Test/: AssemblyInfo.vb  Form1.resx  Form1.vb  Test.vbproj
sfml/: CMakeLists.txt
sfml/src/: main.cpp
